Making Home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link name="css" rel="stylesheet" href="./index.css" />
-    <link type="image/gif" rel="shortcut icon" href="" />
+    <link type="image/gif" rel="shortcut icon" href="./media/icon.png" />
     <title>News Manager</title>
   </head>
 
@@ -13,24 +13,23 @@
     <nav>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link" href="#">Active</a>
+                <a class="nav-link active" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="./news_sport/sport.html">Sport</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="./news_politics/politics.html">Politics</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" >Disabled</a>
+                <a class="nav-link" href="./news_weather/weather.html" >Weather</a>
             </li>
         </ul>
     </nav>
-    <div>
+    <div class="container">
       <div>WELCOME</div>
-      <img src="" alt=""/>
-    </div>
-  </body>
+        <div class="gif-container">
 
+        </div>
   <script src="./index.js"></script>
 </html>
