Make Sport news pages

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </ul>
     </nav>
     <div class="container">
-      <div>WELCOME</div>
-        <div class="gif-container">
-
-        </div>
+      <div class='welcome'>Welcome to <b>Your News Manager</b>. Here developers have collected three types of news: sports, political and weather forecast. Sports news are shown from BBS Sport channel. Political news are demonstrated from CNN channel. Weather forecast is taken from OpenWeatherMap site.</div>
+      <div class="gif-container"></div>
+  </body>
   <script src="./index.js"></script>
 </html>
