Nav media-querries, adding photo in sport news

--- a/news_politics/politics.html
+++ b/news_politics/politics.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     />
     <link name="css" rel="stylesheet" href="./politics.css" />
+    <link name="css" rel="stylesheet" href="../mediaquerries.css" />
     <link type="image/gif" rel="shortcut icon" href="../media/icon.png" />
     <title>Political News</title>
   </head>
