--- a/news_weather/weather.html
+++ b/news_weather/weather.html
@@ -1,35 +1,40 @@
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link name="css" rel="stylesheet" href="./weather.css" />
+    <link name="css" rel="stylesheet" href="../mediaquerries.css" />
     <link type="image/gif" rel="icon" href="../media/icon.png" />
     <title>Weather Forecast</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../news_sport/sport.html">Sport</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../news_politics/politics.html">Politics</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="../news_weather/weather.html">Weather</a>
-            </li>
-        </ul>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../news_sport/sport.html">Sport</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../news_politics/politics.html">Politics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../news_weather/weather.html"
+            >Weather</a
+          >
+        </li>
+      </ul>
     </nav>
     WEATHER
-</body>
+  </body>
 
-<script src="./weather.js"></script>
-
+  <script src="./weather.js"></script>
 </html>
