--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link name="css" rel="stylesheet" href="./index.css" />
+    <link name="css" rel="stylesheet" href="./mediaquerries.css" />
     <link type="image/gif" rel="shortcut icon" href="./media/icon.png" />
     <title>News Manager</title>
   </head>
@@ -27,7 +28,7 @@
         </ul>
     </nav>
     <div class="container">
-      <div class='welcome'>Welcome to <b>Your News Manager</b>. Here developers have collected three types of news: sports, political and weather forecast. Sports news are shown from BBS Sport channel. Political news are demonstrated from CNN channel. Weather forecast is taken from OpenWeatherMap site.</div>
+      <div class='welcome'>Welcome to Your News Manager. Here developers have collected three types of news: sports, political and weather forecast. Sports news are shown from BBS Sport channel. Political news are demonstrated from CNN channel. Weather forecast is taken from OpenWeatherMap site.</div>
       <div class="gif-container"></div>
   </body>
   <script src="./index.js"></script>
