Adding local weather forecast

--- a/news_weather/weather.html
+++ b/news_weather/weather.html
@@ -37,9 +37,13 @@
     </nav>
     <div class="forecast">
       <input type="text" class="form-control" id="cityName" />
-      <button class="btn btn-primary" id="cityFind">Find</button>
+      <button class="btn btn-success btn-lg btn-block" id="cityFind">Find</button>
     </div>
-    <div class="forecastCard"></div>
+    <div class='bigForecastCard'>
+      <div class="localWeatherCardContainer"></div>
+      <div class="forecastCard"></div>
+    </div>
+    
   </body>
 
   <script src="./weather.js"></script>
