--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
   <body>
     <nav>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link active" href="./index.html">Home</a>
+        <ul class="nav">
+            <a class="navbar-brand greenfoot" href="#">
+                <img src="./media/icon.png" width="30" height="30" alt="">
+            </a>
+            <span>
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./news_sport/sport.html">Sport</a>
@@ -24,7 +28,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./news_weather/weather.html" >Weather</a>
-            </li>
+            </li>  
+            </span>
         </ul>
     </nav>
     <div class="container">
