--- a/news_politics/politics.html
+++ b/news_politics/politics.html
@@ -16,19 +16,24 @@
 
   <body>
     <nav>
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../news_sport/sport.html">Sport</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="../news_politics/politics.html">Politics</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../news_weather/weather.html">Weather</a>
-        </li>
+      <ul class="nav">
+        <a class="navbar-brand greenfoot" href="#">
+          <img src="../media/icon.png" width="30" height="30" alt="">
+        </a>
+        <span>
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../news_sport/sport.html">Sport</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../news_politics/politics.html">Politics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../news_weather/weather.html">Weather</a>
+          </li>
+        </span>
       </ul>
     </nav>
   </body>
